--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/router": "~9.1.7",
     "@angular/service-worker": "~9.1.7",
     "firebase": "^7.14.4",
+    "masonry-layout": "^4.2.2",
+    "ngx-masonry": "^9.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
