--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build --spa",
+    "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
