--- a/app.yaml
+++ b/app.yaml
@@ -1,13 +1,17 @@
 runtime: nodejs14
 
 handlers:
-  - url: /
-    static_files: index.html
-    upload: index.html
+  - url: /_nuxt
+    static_dir: dist/_nuxt
     secure: always
-  - url: /(.*)
-    static_files: \1
-    upload: (.*)
+
+  - url: /(.*\.(gif|png|jpg|ico|txt))$
+    static_files: static/\1
+    upload: static/.*\.(gif|png|jpg|ico|txt)$
+    secure: always
+
+  - url: /.*
+    script: auto
     secure: always
 
 env_variables:
